# vae-train

./: Dockerfile  README.md  entrypoint.sh  pyproject.toml  train.py  trainer_args.py
.github/workflows/: ci.yaml  publish.yml
tests/: test_train.py  test_trainer_args.py
vae_train/: trace.py  trainer_args.py
