[project]
name = "vae_train"
version = "0.1.0"
description = "Train VAE models using Diffusers, Datasets, Accelerate"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.0.1",
    "came-pytorch>=0.1.3",
    "datasets>=3.0.2",
    "diffusers>=0.31.0",
    "lpips>=0.1.4",
    "peft>=0.13.2",
    "psutil>=6.1.0",
    "torch==2.4",
    "torchvision>=0.19.0",
]

[project.optional-dependencies]
bitsandbytes = [
    "bitsandbytes>=0.44.1",
]
pytorch-optimizer = []
wandb = [
    "wandb>=0.18.5",
]
tensorboard = [
    "tensorboard>=2.18.0",
]
xformers = [
    "xformers>=0.0.27.post2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "setuptools>=75.3.0",
]

