[project]
name = "vae_train"
version = "0.1.0"
description = "Train VAE models using Diffusers, Datasets, Accelerate"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "accelerate>=1.0.1",
  "datasets>=3.0.2",
  "diffusers>=0.31.0",
  "lpips>=0.1.4",
  "peft>=0.13.2",
  "psutil>=6.1.0",
  "torch==2.4",
  "torchvision>=0.19.0",
]

[project.optional-dependencies]
bitsandbytes = [
  "bitsandbytes>=0.44.1",
  "setuptools>=75.3.0",
]
came-optimizer = [
  "came-pytorch>=0.1.3",
]
wandb = [
  "wandb>=0.18.5",
]
tensorboard = [
  "tensorboard>=2.18.0",
]
xformers = [
  "xformers>=0.0.27.post2",
  "setuptools>=75.3.0",
]
types = [
  "pyright==1.1.389",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
ignore = ["E501"]

[language-server.ruff.config.lint]
line-length = 88
select = ["E", "F"]

[dependency-groups]
dev = [
  "pytest-timeout>=2.3.1",
  "pytest>=8.3.3",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
pythonpath = '.'
filterwarnings = ["ignore::FutureWarning"]

[tool.uv.sources]
vae-train = { workspace = true }
